--- a/style.css
+++ b/style.css
@@ -13,28 +13,67 @@
 nav {
     padding: 10px;
     width: 100%;
-    font-size: 70% ;
+    font-size: 70%;
     position: absolute;
     background-color: black;
     color: white;
     display: flex;
     justify-content: space-between;
-
+    align-items: center;
 }
 
-#b_left{
+#b_left {
     width: 30%;
     display: flex;
     justify-content: space-around;
 }
 
-ul {
+#b_left ul {
+    width: 80%;
     list-style: none;
-    display:flex;
+    display: flex;
     justify-content: space-around;
 }
+
 
 #logo {
     max-width: 12%;
     height: auto;
+}
+
+#b_right {
+    width: 30%;
+    display: flex;
+    justify-content: space-around;
+}
+
+#b_right ul {
+    width: 50%;
+    list-style: none;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.ico {
+    width: 20px;
+    height: auto;
+}
+
+#profile {
+    display: flex;
+}
+
+#profile :first-child {
+    border-radius: 2px;
+}
+
+#arrow {
+    width:15px;
+    align-items: center;
+}
+
+li div {
+    display: flex;
+    align-items: center;
 }
